# sirna_pre_process

./: .env  .gitattributes  accessblity_score.ipynb  main.py  pyproject.toml
H_Sapien_blast_db/: H_Sapien_mrna_db.nin  H_Sapien_mrna_db.nsq
data/: NM_000371.4_lunp  TTR_mrna.fasta  TTR_mrna.fasta_results.csv  TTR_mrna_dp.ps  TTR_mrna_lunp  TTR_mrna_results.csv  filter_score.csv  human_all.rna.fna  inference_score_results.csv  siRNA_Design.csv  sirna.fa  top_k_siRNA_OTE_ntSeq_added_Summary.csv  top_k_siRNA_OffTargetEffect_Summary.csv
data/mrna_NM_sequences/: HAO1.fna  TTR.fna
data/mrna_NM_sequences/ALAS1/: ALAS1_v1.fna  ALAS1_v2.fna  ALAS1_v3.fna  ALAS1_v4.fna
data/mrna_NM_sequences/PCSK9/: PCSK9_v1.fna  PCSK9_v10.fna  PCSK9_v3.fna  PCSK9_v4.fna  PCSK9_v5.fna  PCSK9_v6.fna  PCSK9_v7.fna  PCSK9_v8.fna  PCSK9_v9.fna
data/mrna_NM_sequences/SERPINC1/: SERPINC1_v1.fna  SERPINC1_v2.fna  SERPINC1_v3.fna  SERPINC1_v4.fna  SERPINC1_v5.fna  SERPINC1_v6.fna  SERPINC1_v7.fna
output_csv/: TTR_mrna_siRNA_19.csv  TTR_mrna_siRNA_21.csv  TTR_mrna_siRNA_23.csv  TTR_mrna_siRNA_Design.csv
outputs/: TTR_mrna_dp.ps  TTR_mrna_lunp
outputs/ALAS1/v1/: ALAS1_v1.csv  ALAS1_v1_dp.ps  ALAS1_v1_lunp
outputs/ALAS1/v2/: ALAS1_v2.csv  ALAS1_v2_dp.ps  (+1 more)
outputs/HAO1/: HAO1.csv  HAO1_dp.ps  HAO1_lunp
outputs/TTR/: TTR.csv  TTR_dp.ps
scripts/: blast_db.sh  config_OT.yaml  eda_csv_tsv.py  main.py  process_tsv_file.py
src/AttSioff/: filter_score.csv  inference.py  input_creation.py  model.py  utils.py
src/Preprocess/: Preprocessing.py
src/preprocess/: Preprocessing.py
src/sirna_pre_process/: __init__.py  filters.py  run_RNAplFold.py  second_struct_prob.py  utils.py
(+77 files in other folders)
