[project]
name = "sirna-pre-process"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Saranya Pal", email = "saranya.pal@nuvo.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy==2.3.0",
    "pandas==2.3.0",
    "rna-fm==0.2.2",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "torch==2.7.1",
    "multimolecule>=0.0.7",
    "argparse>=1.4.0",
    "tqdm>=4.67.1",
    "viennarna>=2.7.0",
    "python-dotenv>=1.1.1",
    "biopython>=1.85",
]

[project.scripts]
sirna-pre-process = "sirna_pre_process:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sirna_pre_process"]
